Clean v1: keep forecast URL encoding compatible with Android 8